add .env and Flask-apispec
