# app/static/swagger/swagger.json
@@ -1,326 +1,13 @@
 {
-<<<<<<< HEAD
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
     "title": "Swagger S4I",
     "license": {
       "name": "MIT"
-=======
-    "swagger": "2.0",
-    "info": {
-        "version": "1.0.0",
-        "title": "Swagger S4I",
-        "license": {
-            "name": "MIT"
-        }
-    },
-    "host": "http://localhost:8080",
-    "basePath": "/",
-    "schemes": [
-        "http"
-    ],
-    "consumes": [
-        "application/json"
-    ],
-    "produces": [
-        "application/json"
-    ],
-    "paths": {
-        "/auth": {
-            "post": {
-                "summary": "Get Access Token",
-                "tags": [
-                    "Auth"
-                ],
-                "parameters": [
-                    {
-                        "name": "username",
-                        "in": "body",
-                        "description": "The email of the user",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "password",
-                        "in": "body",
-                        "description": "The password of the user",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "success",
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "access_token": {
-                                    "type": "string"
-                                }
-                            }
-                        }
-                    },
-                    "default": {
-                        "description": "Failed",
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "message": {
-                                    "type": "string"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/users": {
-            "get": {
-                "summary": "List all users",
-                "tags": [
-                    "Users"
-                ],
-                "parameters": [],
-                "responses": {
-                    "200": {
-                        "description": "An array of users",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "object",
-                                "properties": {
-                                    "id": {
-                                        "type": "string"
-                                    },
-                                    "first_name": {
-                                        "type": "string"
-                                    },
-                                    "last_name": {
-                                        "type": "string"
-                                    },
-                                    "email": {
-                                        "type": "string"
-                                    },
-                                    "password": {
-                                        "type": "string"
-                                    },
-                                    "birthDate": {
-                                        "type": "string"
-                                    }
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "unexpected error",
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "message": {
-                                    "type": "string"
-                                }
-                            }
-                        }
-                    }
-                }
-            },
-            "post": {
-                "summary": "Create a user",
-                "tags": [
-                    "Users"
-                ],
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "body",
-                        "description": "The id of the user",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "first_name",
-                        "in": "body",
-                        "description": "The first_name of the user",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "last_name",
-                        "in": "body",
-                        "description": "The last_name of the user",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "email",
-                        "in": "body",
-                        "description": "The email of the user",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "password",
-                        "in": "body",
-                        "description": "The password of the user",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "birthDate",
-                        "in": "body",
-                        "description": "The birthDate of the user",
-                        "required": true,
-                        "type": "string",
-                        "format": "date"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "success",
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "message": {
-                                    "type": "string"
-                                }
-                            }
-                        }
-                    },
-                    "default": {
-                        "description": "Failed",
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "message": {
-                                    "type": "string"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/users/{userId}": {
-            "get": {
-                "summary": "Get user",
-                "tags": [
-                    "Users"
-                ],
-                "parameters": [],
-                "responses": {
-                    "200": {
-                        "description": "A User",
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "id": {
-                                    "type": "string"
-                                },
-                                "first_name": {
-                                    "type": "string"
-                                },
-                                "last_name": {
-                                    "type": "string"
-                                },
-                                "email": {
-                                    "type": "string"
-                                },
-                                "password": {
-                                    "type": "string"
-                                },
-                                "birthDate": {
-                                    "type": "string"
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "unexpected error",
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "message": {
-                                    "type": "string"
-                                }
-                            }
-                        }
-                    }
-                }
-            },
-            "put": {
-                "summary": "Update a user",
-                "tags": [
-                    "Users"
-                ],
-                "parameters": [
-                    {
-                        "name": "first_name",
-                        "in": "body",
-                        "description": "The first_name of the user",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "last_name",
-                        "in": "body",
-                        "description": "The last_name of the user",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "email",
-                        "in": "body",
-                        "description": "The email of the user",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "password",
-                        "in": "body",
-                        "description": "The password of the user",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "birthDate",
-                        "in": "body",
-                        "description": "The birthDate of the user",
-                        "required": true,
-                        "type": "string",
-                        "format": "date"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "success",
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "message": {
-                                    "type": "string"
-                                }
-                            }
-                        }
-                    },
-                    "default": {
-                        "description": "Failed",
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "message": {
-                                    "type": "string"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        }
->>>>>>> 5da2c8726fd05c03480cad620d87e1a03b73faf9
     }
   },
-  "host": "localhost:8080",
+  "host": "http://localhost:8080",
   "basePath": "/",
   "schemes": [
     "http"
